--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,10 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0",
-    "cesiumjs": "~1.13.0"
+    "angular-route": "~1.4.0",
+    "cesium": "cesiumjs#~1.12.0",
+    "html5-boilerplate": "~5.2.0"
   }
 }
