--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,17 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
+    "angular-animate": "~1.4.5",
+    "angular-aria": "~1.4.5",
     "angular-loader": "~1.4.0",
+    "angular-material": "~0.10.1",
     "angular-mocks": "~1.4.0",
     "angular-route": "~1.4.0",
+    "angular-ui-router": "~0.2.15",
     "cesium": "cesiumjs#~1.12.0",
     "html5-boilerplate": "~5.2.0"
+  },
+  "resolutions": {
+    "angular": "1.4.5"
   }
 }
