--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-route": "~1.4.0",
     "angular-ui-router": "~0.2.15",
     "html5-boilerplate": "~5.2.0",
-    "d3": "~3.4.4"
+    "d3": "~3.4.4",
+    "mdi": "~1.3.41"
   },
   "resolutions": {
     "angular": "1.4.5"
