--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "dependencies": {
     "angular": "~1.4.0",
     "angular-animate": "~1.4.5",
