--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-seed",
   "description": "A starter project for AngularJS",
-  "main": "./components/force-horse/forceHorse.js",
+  "main": "components/forceHorse/forceHorse.js",
   "version": "0.2.8",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
