--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,15 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "force-horse",
+  "description": "An angular.js wrapper for d3.js force layout",
   "main": "components/forceHorse/forceHorse.js",
   "version": "0.2.8",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/webiks/force-horse",
   "license": "MIT",
   "private": false,
   "dependencies": {
     "angular": "~1.4.0",
     "angular-aria": "~1.4.5",
     "angular-material": "~0.10.1",
-    "angular-mocks": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "angular-ui-router": "~0.2.15",
-    "html5-boilerplate": "~5.2.0",
     "d3": "~3.4.4",
     "mdi": "~1.3.41"
   },
@@ -21,6 +17,6 @@
     "angular": "1.4.5"
   },
   "devDependencies": {
-    "lodash": "~3.10.1"
+    "angular-mocks": "~1.4.0"
   }
 }
