--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "shelljs": "^0.2.6"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "gulp": "3.9.0",
     "gulp-jshint": "1.11.2",
     "gulp-util": "3.0.6",
