chore(): moving to the main repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-logs/*
-!.gitkeep
+.idea/
+dist/
 node_modules/
-bower_components/
-tmp
-.DS_Store
-.idea
-desktop.ini
-.travis.yml
-npm-debug.log
-src/app/TILDOCS-#40699695-v1-ùàâ æëåëàì.docx
-*.docx
