--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preinstall": "npm i -g webpack webpack-dev-server karma",
     "start": "webpack && webpack-dev-server --progress",
     "test": "karma start ./karma.conf.js",
-    "test-ci": "karma start ./test-config/karma.conf.js --single-run",
+    "test-ci": "karma start ./karma.conf.js --single-run",
     "test-coverage": "karma start ./karma.conf.js --coverage"
   },
   "repository": {
@@ -40,13 +40,11 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.8.0",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
