--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "src/index.js",
   "style": "src/index.scss",
   "scripts": {
-    "preinstall": "npm i -g webpack webpack-dev-server karma",
     "start": "webpack && webpack-dev-server --progress",
     "test": "karma start ./karma.conf.js",
-    "test-ci": "./node_modules/.bin/karma start ./karma.conf.js --browsers Firefox --single-run",
+    "test-ci": "./node_modules/.bin/karma start ./karma.conf.js --single-run",
     "test-coverage": "karma start ./karma.conf.js --coverage"
   },
   "repository": {
@@ -46,7 +45,6 @@
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
