docs(): general info

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forse-horse",
+  "name": "force-horse",
   "version": "1.0.0",
   "description": "A web component wrapper for d3.js force layout",
   "main": "src/index.js",
